syntax = "proto3"; //协议版本号

option go_package = ".;io_grpc_justtest";

package onlytest; // 包名

//定义服务
service Greeter {
  //注意：这里是returns 不是return
  rpc TestSomeThing (TestRequest) returns (TestResponse) {
  }
}
//定义消息类型
message TestRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}
message TestResponse {
  int32 message = 1;
}

